// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ConfigCacheTestCases css large exported tests should allow to create css modules: dev 1`] = `
Object {
  "placeholder": "my-app-tailwind_module_css-placeholder-gray-700",
}
`;

exports[`ConfigCacheTestCases css large exported tests should allow to create css modules: prod 1`] = `
Object {
  "placeholder": "Xk90he",
}
`;
